--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "description": "444.hu Web Scraper",
     "type": "project",
     "require": {
-        "fabpot/goutte": "^4.0"
+        "fabpot/goutte": "^4.0",
+        "phpoffice/phpspreadsheet": "^1.15",
+        "nesbot/carbon": "^2.43",
+        "squizlabs/php_codesniffer": "*"
     },
     "license": "MIT",
     "authors": [
@@ -11,5 +14,8 @@
             "name": "Marton Tasnadi",
             "email": "marton.tasnadi@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "symfony/var-dumper": "^5.2"
+    }
 }
